<?xml version="1.0" encoding="utf-8"?>

<!-- Layout for the editor -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context="com.example.android.inventoryapp.EditorActivity">

    <!-- Title -->
    <TextView
        style="@style/style_title"
        android:text="@string/title_product_details" />

    <!-- Name category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Name Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_name" />

        <!-- Name input field -->
        <EditText
            android:id="@+id/edittext_product_name"
            style="@style/EditorFieldStyle"
            android:inputType="textCapWords" />

    </LinearLayout>

    <!-- Price category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Price Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_price" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:orientation="horizontal">

            <!-- Price input field -->
            <EditText
                android:id="@+id/edittext_product_price"
                style="@style/EditorFieldStyle"
                android:inputType="numberDecimal" />

            <TextView
                style="@style/style_euro"
                android:text="@string/category_title_euro" />
        </LinearLayout>

    </LinearLayout>

    <!-- Quantity category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Quantity Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_quantity" />

        <!-- Quantity input field and title unit-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edittext_product_quantity"
                style="@style/EditorFieldStyle"
                android:inputType="numberDecimal" />

            <Button
                android:id="@+id/button_decrease"
                style="@style/style_buttons"
                android:onClick="decreaseQuantity"
                android:text="@string/button_decrease" />

            <Button
                android:id="@+id/button_increase"
                style="@style/style_buttons"
                android:layout_weight="1"
                android:onClick="increaseQuantity"
                android:text="@string/button_increase" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_supplier" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:orientation="horizontal">

            <!-- Supplier input field -->
            <EditText
                android:id="@+id/edittext_product_supplier"
                style="@style/EditorFieldStyle"
                android:inputType="textEmailAddress" />

            <Button
                android:id="@+id/button_order"
                style="@style/style_button"
                android:onClick="orderProduct"
                android:text="@string/button_order" />

        </LinearLayout>

    </LinearLayout>
    <!-- Supplier category -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="20dp">

        <ImageView
            android:id="@+id/imageview_item_photo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitCenter"

            android:src="@drawable/empty_image2" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_photo"
            style="@style/style_fab_addphoto"
            android:src="@drawable/add_image_white" />

    </RelativeLayout>

</LinearLayout>
